--- a/content/tutorial/nav.yml
+++ b/content/tutorial/nav.yml
@@ -1,7 +1,7 @@
-- title: Tutorial
+- title: "Въведение в React"
   items:
     - id: before-we-start-the-tutorial
-      title: Before We Start the Tutorial
+      title: Преди да започнем
       href: /tutorial/tutorial.html#before-we-start-the-tutorial
       forceInternal: true
       subitems:
