--- a/content/headerNav.yml
+++ b/content/headerNav.yml
@@ -1,13 +1,13 @@
 items:
-  - title: Docs
+  - title: Документация
     to: /docs/getting-started.html
     activeSelector: /docs/
-  - title: Tutorial
+  - title: Уроци
     to: /tutorial/tutorial.html
     activeSelector: /tutorial
-  - title: Blog
+  - title: Блог
     to: /blog/
     activeSelector: /blog
-  - title: Community
+  - title: Общност
     to: /community/support.html
     activeSelector: /community
